k8s/infrastructure/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bidly-ingress
  namespace: bidly
  annotations:
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/managed-certificates: bidly-cert
    kubernetes.io/ingress.global-static-ip-name: "bidly-ingress-ip"
spec:
  rules:
    - host: bidly-backend.com  
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kong
                port:
                  number: 8000
